force-app/main/default/objects/Opportunity/fields/Entry_options__c.field-meta.xml
<CustomField>
    <fullName>Entry_options__c</fullName>
    <label>Entry options</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Opt1</fullName>
            </value>
            <value>
                <fullName>Opt2</fullName>
            </value>
            <value>
                <fullName>Opt3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>