force-app/main/default/objects/Opportunity/fields/Forecaste_Range__c.field-meta.xml
<CustomField>
    <fullName>Forecaste_Range__c</fullName>
    <label>Forecaste Range</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>